--- a/src/components/Content/Reference/Reference.css
+++ b/src/components/Content/Reference/Reference.css
@@ -5,7 +5,11 @@
     padding: 12px 32px;
     margin: 16px auto;
     background-color: rgb(236, 255, 249);
-    transition-duration: 1s;
+    /* transition-duration: 1s; */
+    -webkit-box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.75);
+
 }
 
 .reference hr {
