--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,9 @@
     z-index: 10;
     /* transition-duration: 1s; */
     background-color: navy;
+    -webkit-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.75);
 }
 
 .header-logo {
@@ -28,6 +31,7 @@
     align-items: center;
     height: 80px;
     width: 100%;
+
 }
 
 .header-left {
