--- a/src/components/Content/Form/Form.css
+++ b/src/components/Content/Form/Form.css
@@ -4,6 +4,9 @@
     align-items: center;
     z-index: 100;
     border-radius: 64px;
+    -webkit-box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.75);
 }
 
 .group-form form {
