--- a/src/components/Content/Reference/Reference.css
+++ b/src/components/Content/Reference/Reference.css
@@ -71,7 +71,7 @@
 }
 
 .refer-top-right-top span i:hover {
-    color: #131313b2
+    color: #000000
 }
 
 .refer-top-right-bottom {
@@ -119,7 +119,6 @@
 .cont-div {
     background-color: lightblue;
     width: 900px;
-    border: 1px solid red;
 }
 
 .refer-mid tr {
