--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,7 +3,6 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-    background-color: darkblue;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -15,7 +14,7 @@
 }
 
 .footer h1 {
-    color: whitesmoke;
+    color: rgba(245, 245, 245, 0.651);
     font-size: 18px;
 }
 
